--- a/demoReactNative/package.json
+++ b/demoReactNative/package.json
@@ -24,7 +24,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "^13.10.5",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
