--- a/demoReactNative/package.json
+++ b/demoReactNative/package.json
@@ -18,6 +18,8 @@
     "@reduxjs/toolkit": "^2.2.6",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-calendar-picker": "^8.0.5",
+    "react-native-calendars": "^1.1306.0",
     "react-native-pager-view": "^6.3.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
@@ -36,6 +38,7 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
+    "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
