--- a/demoReactNative/package.json
+++ b/demoReactNative/package.json
@@ -15,14 +15,15 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
+    "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.6",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-calendar-picker": "^8.0.5",
     "react-native-calendars": "^1.1306.0",
     "react-native-pager-view": "^6.3.3",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^3.35.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "^13.10.5",
     "react-redux": "^9.1.2",
@@ -41,7 +42,7 @@
     "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
